# ripref

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .rr.toml  .rumdl.toml  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  package.json  rr.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: freshness.rs  freshness_scaling.rs  grammar_loader.rs  index.rs  query.rs
benches/corpus/: mod.rs
benches/wasm/: build-markdown-wasm.sh  tree-sitter-markdown.wasm
doc/ad/: 0001-domain-model.md  0002-marker-syntax.md  0003-cli-verbs.md  0004-output-contract.md  0005-path-mentions.md
doc/adr/: 0001-citation-syntax.md
examples/: wasm_load_probe.rs
scripts/: bench_all.py  bench_e2e.py  bench_regression.py  check.sh  citation_regex_oracle.py  marker_regex_oracle.py
src/: atomic.rs  blobhash.rs  citation.rs  cli.rs  commands.rs  config.rs  extractors.rs  git.rs  indexer.rs  lib.rs  main.rs  marker.rs  refidx.rs  scan.rs  sidecar.rs
src/languages/: README.md  markdown.rs  mod.rs  rust.rs
tests/: alloc.rs  citation_oracle.rs  cli.rs  marker_oracle.rs
tests/common/: mod.rs
tests/data/: citation-violations.md  grammar_bench.md  heading-anchors.md  marker-violations.md  sectioned-code.rs
usecases/: adr-traceability.md  claude-anchored-references.md  editor-completion.md
